# brainwires-framework

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  Future.md  PUBLISHING.md  README.md  TESTING.md  analysis.md
crates/brainwires-a2a/: Cargo.toml  README.md
crates/brainwires-a2a/examples/: a2a_client_server.rs  a2a_streaming.rs  agent_card.rs
crates/brainwires-a2a/src/: agent_card.rs  convert.rs  error.rs  jsonrpc.rs  lib.rs  params.rs  push_notification.rs  streaming.rs  task.rs  types.rs
crates/brainwires-a2a/tests/: client_server.rs  http_integration.rs  serde_roundtrip.rs  server_features.rs  sse_parser.rs
crates/brainwires-agent-network/: Cargo.toml  README.md
crates/brainwires-agent-network/examples/: mcp_server.rs  middleware_chain.rs  network_manager.rs
crates/brainwires-agent-network/src/: error.rs  lib.rs  server.rs
crates/brainwires-agent-network/tests/: discovery_and_identity.rs  envelope_serde.rs  middleware_pipeline.rs  network_manager.rs  routing_integration.rs  tool_registry.rs
crates/brainwires-agents/: Cargo.toml  README.md
crates/brainwires-agents/examples/: agent_pool.rs  contract_net.rs  cycle_orchestrator.rs  optimistic_concurrency.rs  planner_judge_parsing.rs  saga_compensation.rs  skill_registry.rs  task_decomposition.rs  task_queue_scheduling.rs  three_state_model.rs  validation_loop.rs  voting_consensus.rs  workflow_dag.rs
crates/brainwires-agents/src/: access_control.rs  agent_hooks.rs  chat_agent.rs  communication.rs  confidence.rs  context.rs  contract_net.rs  cycle_orchestrator.rs  execution_graph.rs  file_locks.rs  git_coordination.rs  judge_agent.rs  lib.rs  market_allocation.rs  operation_tracker.rs  optimistic.rs  otel.rs  personas.rs  plan_executor.rs  planner_agent.rs  pool.rs  resource_checker.rs  resource_locks.rs  roles.rs  runtime.rs  saga.rs  state_model.rs  summarization.rs  system_prompts.rs  task_agent.rs  task_orchestrator.rs  task_queue.rs  validation_agent.rs  validation_loop.rs  validator_agent.rs  wait_queue.rs  workflow.rs  worktree.rs
crates/brainwires-agents/tests/: communication_hub.rs  coordination_patterns.rs  file_lock_coordination.rs  fixtures_suite.rs  parallel_tools.rs  summarization.rs  task_lifecycle.rs  validation.rs
crates/brainwires-analytics/: Cargo.toml  README.md
crates/brainwires-analytics/examples/: track_agent_run.rs
crates/brainwires-analytics/src/: collector.rs  error.rs  events.rs  export.rs  layer.rs  lib.rs  pii.rs  query.rs  sink.rs
crates/brainwires-audio/: Cargo.toml  README.md
crates/brainwires-audio/examples/: capture_audio.rs  play_audio.rs  play_wav.rs  speech_to_text.rs  text_to_speech.rs
crates/brainwires-audio/src/: buffer.rs  capture.rs  device.rs  error.rs  flac.rs  lib.rs  playback.rs  tts.rs  types.rs  wav.rs
crates/brainwires-audio/tests/: audio_buffer.rs  audio_config.rs  cloud_providers.rs  error_types.rs  flac_codec.rs  ring_buffer.rs  types_serde.rs  wav_codec.rs
crates/brainwires-autonomy/: Cargo.toml  README.md
crates/brainwires-autonomy/examples/: cicd_orchestrator.rs  crash_recovery.rs  cron_scheduler.rs  fs_reactor.rs  git_workflow_pipeline.rs  gpio_pins.rs  health_monitor.rs  safety_guard.rs  self_improve_strategies.rs  service_manager.rs  session_metrics.rs
crates/brainwires-autonomy/src/: config.rs  error.rs  lib.rs  metrics.rs  safety.rs
crates/brainwires-brain/: Cargo.toml  README.md
crates/brainwires-brain/examples/: mcp_server.rs
crates/brainwires-brain/src/: brain_client.rs  entity.rs  fact_extractor.rs  lib.rs  main.rs  mcp_server.rs  relationship_graph.rs  thought.rs  types.rs
crates/brainwires-bridge/: Cargo.toml
crates/brainwires-bridge-client/: Cargo.toml  README.md
crates/brainwires-bridge-client/src/: agent_ops.rs  client.rs  error.rs  lib.rs  protocol.rs
crates/brainwires-bridge/src/: error.rs  handler.rs  lib.rs  registry.rs  server.rs
crates/brainwires-channels/: Cargo.toml  README.md
crates/brainwires-channels/examples/: mock_channel.rs
crates/brainwires-channels/src/: capabilities.rs  conversion.rs  events.rs  handshake.rs  lib.rs  message.rs  traits.rs
crates/brainwires-chat/: Cargo.toml
crates/brainwires-chat/src/: anthropic.rs  anyscale.rs  brainwires_http.rs  factory.rs  fireworks.rs  google.rs  groq.rs  lib.rs  model_listing.rs  ollama.rs  openai.rs  together.rs
crates/brainwires-code-interpreters/: Cargo.toml  README.md
crates/brainwires-code-interpreters/docker/: Dockerfile.sandbox
crates/brainwires-code-interpreters/examples/: multi_language.rs  rhai_scripting.rs  sandboxed_python.rs
crates/brainwires-code-interpreters/src/: docker.rs  executor.rs  lib.rs  types.rs  wasm_bindings.rs
crates/brainwires-code-interpreters/tests/: executor.rs  javascript_tests.rs  lua_tests.rs  python_tests.rs  rhai_tests.rs
crates/brainwires-core/: Cargo.toml  README.md
crates/brainwires-core/src/: content_source.rs  embedding.rs  error.rs  event.rs  graph.rs  lib.rs  lifecycle.rs  message.rs  output_parser.rs  permission.rs  plan.rs  plan_parser.rs  provider.rs  search.rs  task.rs  tool.rs  vector_store.rs  workflow_state.rs  working_set.rs
crates/brainwires-core/tests/: generate_fixtures.rs
crates/brainwires-datasets/: Cargo.toml  README.md
crates/brainwires-datasets/examples/: jsonl_pipeline.rs  (+1 more)
crates/brainwires-eval/: Cargo.toml  README.md
crates/brainwires-extras/: Cargo.toml  README.md
crates/brainwires-finetune/: Cargo.toml  README.md
crates/brainwires-finetune-local/: Cargo.toml
crates/brainwires-hardware/: Cargo.toml  README.md
crates/brainwires-inference/: Cargo.toml
crates/brainwires-knowledge/: Cargo.toml  README.md
crates/brainwires-mcp/: Cargo.toml  README.md
crates/brainwires-mcp-server/: Cargo.toml  README.md
crates/brainwires-mdap/: Cargo.toml  README.md
crates/brainwires-memory/: Cargo.toml  README.md
crates/brainwires-mesh/: Cargo.toml  README.md
crates/brainwires-model-tools/: Cargo.toml  README.md
crates/brainwires-network/: Cargo.toml  README.md
crates/brainwires-permissions/: Cargo.toml  README.md
(+2406 files in other folders)
