[workspace]
members = [
    "crates/brainwires-core",
    "crates/brainwires",
    "crates/brainwires-model-tools",
    "crates/brainwires-agents",
    "crates/brainwires-storage",
    "crates/brainwires-mcp",
    "crates/brainwires-mdap",
    "crates/brainwires-prompting",
    "crates/brainwires-permissions",
    "crates/brainwires-rag",
    "crates/brainwires-code-interpreters",
    "crates/brainwires-wasm",
    "crates/brainwires-relay",
    "crates/brainwires-seal",
    "crates/brainwires-providers",
    "crates/brainwires-skills",
    "crates/brainwires-mesh",
    "crates/brainwires-audio",
    "crates/brainwires-datasets",
    "crates/brainwires-training",
    "crates/brainwires-autonomy",
    "crates/brainwires-brain",
    "extras/brainwires-proxy",
    "extras/brainwires-brain-server",
    "extras/brainwires-rag-server",
    "extras/reload-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/Brainwires/brainwires-framework"
homepage = "https://github.com/Brainwires/brainwires-framework"
authors = ["Brainwires"]
keywords = ["ai-agents", "llm", "mcp", "multi-agent", "framework"]
categories = ["development-tools", "science::robotics"]
readme = "README.md"
documentation = "https://docs.rs/brainwires"

[workspace.dependencies]
# Internal crates
brainwires-core = { path = "crates/brainwires-core", version = "0.1.0" }
brainwires-model-tools = { path = "crates/brainwires-model-tools", version = "0.1.0" }
brainwires-agents = { path = "crates/brainwires-agents", version = "0.1.0" }
brainwires-storage = { path = "crates/brainwires-storage", version = "0.1.0" }
brainwires-mcp = { path = "crates/brainwires-mcp", version = "0.1.0" }
brainwires-mdap = { path = "crates/brainwires-mdap", version = "0.1.0" }
brainwires-prompting = { path = "crates/brainwires-prompting", version = "0.1.0" }
brainwires-permissions = { path = "crates/brainwires-permissions", version = "0.1.0" }
brainwires-rag = { path = "crates/brainwires-rag", version = "0.1.0", default-features = false }
brainwires-code-interpreters = { path = "crates/brainwires-code-interpreters", version = "0.1.0" }
brainwires-wasm = { path = "crates/brainwires-wasm", version = "0.1.0" }
brainwires-relay = { path = "crates/brainwires-relay", version = "0.1.0" }
brainwires-seal = { path = "crates/brainwires-seal", version = "0.1.0" }
brainwires-providers = { path = "crates/brainwires-providers", version = "0.1.0" }
brainwires-skills = { path = "crates/brainwires-skills", version = "0.1.0" }
brainwires-mesh = { path = "crates/brainwires-mesh", version = "0.1.0" }
brainwires-audio = { path = "crates/brainwires-audio", version = "0.1.0" }
brainwires-datasets = { path = "crates/brainwires-datasets", version = "0.1.0" }
brainwires-training = { path = "crates/brainwires-training", version = "0.1.0" }
brainwires-autonomy = { path = "crates/brainwires-autonomy", version = "0.1.0", default-features = false }
brainwires-brain = { path = "crates/brainwires-brain", version = "0.1.0" }
brainwires-proxy = { path = "extras/brainwires-proxy", version = "0.1.0" }

# Tokenizer dependencies
tokenizers = "0.21"
tiktoken-rs = "0.7"

# ML training framework — default-features = false to exclude burn-dataset (which pulls
# rusqlite 0.32 → libsqlite3-sys 0.30, conflicting with rustpython-stdlib's 0.28)
burn = { version = "0.16", default-features = false, features = ["std", "wgpu", "autodiff", "ndarray"] }

# Async runtime & utilities
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Identifiers & time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# MCP protocol
rmcp = { version = "0.8", features = ["client", "server", "transport-sse-client", "transport-child-process", "transport-io", "macros"] }

# MCP server support
schemars = "1.0"
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Vector database & columnar storage
lancedb = "0.23"
arrow = "56.2"
arrow-array = "56.2"
arrow-schema = "56.2"

# Embeddings
fastembed = "5.1"

# Caching
lru = "0.12"

# Hashing
sha2 = "0.10"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# File operations
walkdir = "2.5"
diffy = "0.4"
glob = "0.3"

# Code search
regex = "1"
ignore = "0.4"

# URL encoding
urlencoding = "2"

# Filesystem paths
dirs = "6"

# Git
git2 = "0.19"

# Security
zeroize = { version = "1", features = ["derive"] }

# Config parsing
toml = "0.8"

# ML / Clustering
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"

# Binary encoding
bincode = "1"

# Crypto
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
subtle = "2.6"

# Keyring (secure key storage)
keyring = "3"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# URL parsing
url = "2.5"

# Hostname
gethostname = "1.0"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Local LLM inference (optional)
llama-cpp-2 = "0.1"

# AWS SDK (Bedrock auth)
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"

# GCP auth (Vertex AI)
gcp_auth = "0.12"

# HTTP (hyper ecosystem)
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
http = "1.1"
http-body-util = "0.1"
bytes = "1"

# Async stream adapters
tokio-stream = "0.1"

# Testing
tempfile = "3"
