[workspace]
members = [
    "crates/brainwires-core",
    "crates/brainwires",
    "crates/brainwires-tool-system",
    "crates/brainwires-agents",
    "crates/brainwires-storage",
    "crates/brainwires-mcp",
    "crates/brainwires-mdap",
    "crates/brainwires-permissions",
    "crates/brainwires-code-interpreters",
    "crates/brainwires-wasm",
    "crates/brainwires-agent-network",
    "crates/brainwires-a2a",
    "crates/brainwires-providers",
    "crates/brainwires-skills",
    "crates/brainwires-audio",
    "crates/brainwires-datasets",
    "crates/brainwires-training",
    "crates/brainwires-autonomy",
    "crates/brainwires-cognition",
    "extras/brainwires-proxy",
    "extras/brainwires-brain-server",
    "extras/brainwires-rag-server",
    "extras/reload-daemon",
    "extras/agent-chat",
    "extras/audio-demo-ffi",
    "xtask",
]
exclude = [
    "deprecated/brainwires-brain",
    "deprecated/brainwires-mesh",
    "deprecated/brainwires-prompting",
    "deprecated/brainwires-rag",
    "deprecated/brainwires-relay",
    "deprecated/brainwires-seal",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"
repository = "https://github.com/Brainwires/brainwires-framework"
homepage = "https://github.com/Brainwires/brainwires-framework"
authors = ["Brainwires"]
keywords = ["ai-agents", "llm", "mcp", "multi-agent", "framework"]
categories = ["development-tools", "science::robotics"]
readme = "README.md"
documentation = "https://docs.rs/brainwires"

[workspace.dependencies]
# Internal crates
brainwires-core = { path = "crates/brainwires-core", version = "0.4.0" }
brainwires-tool-system = { path = "crates/brainwires-tool-system", version = "0.4.1" }
brainwires-agents = { path = "crates/brainwires-agents", version = "0.4.1" }
brainwires-storage = { path = "crates/brainwires-storage", version = "0.4.1", default-features = false }
brainwires-mcp = { path = "crates/brainwires-mcp", version = "0.4.0" }
brainwires-mdap = { path = "crates/brainwires-mdap", version = "0.4.0" }
brainwires-permissions = { path = "crates/brainwires-permissions", version = "0.4.0" }
brainwires-code-interpreters = { path = "crates/brainwires-code-interpreters", version = "0.4.0" }
brainwires-wasm = { path = "crates/brainwires-wasm", version = "0.4.1" }
brainwires-agent-network = { path = "crates/brainwires-agent-network", version = "0.4.0" }
brainwires-a2a = { path = "crates/brainwires-a2a", version = "0.4.0", default-features = false }
brainwires-providers = { path = "crates/brainwires-providers", version = "0.4.0" }
brainwires-skills = { path = "crates/brainwires-skills", version = "0.4.0" }
brainwires-audio = { path = "crates/brainwires-audio", version = "0.4.0" }
brainwires-datasets = { path = "crates/brainwires-datasets", version = "0.4.0" }
brainwires-training = { path = "crates/brainwires-training", version = "0.4.0" }
brainwires-autonomy = { path = "crates/brainwires-autonomy", version = "0.4.1", default-features = false }
brainwires-cognition = { path = "crates/brainwires-cognition", version = "0.4.1", default-features = false }
brainwires-proxy = { path = "extras/brainwires-proxy", version = "0.4.0" }

# Tokenizer dependencies
tokenizers = "0.22"
tiktoken-rs = "0.9"

# ML training framework — individual crates to avoid cubecl-cpu (links = "lzma" conflict
# with xz2 from datafusion/lancedb). Using individual crates instead of umbrella `burn`.
burn-core = { version = "0.20", default-features = false, features = ["std"] }
burn-nn = { version = "0.20", default-features = false, features = ["std"] }
burn-optim = { version = "0.20", default-features = false, features = ["std"] }
burn-autodiff = { version = "0.20", default-features = false, features = ["std"] }
burn-wgpu = { version = "0.20", default-features = false, features = ["std", "autotune"] }
burn-ndarray = { version = "0.20", default-features = false, features = ["std"] }

# Async runtime & utilities
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Error handling
anyhow = "1"
thiserror = "2"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# MCP protocol
rmcp = { version = "1.1", features = ["client", "server", "client-side-sse", "transport-child-process", "transport-io", "macros"] }

# MCP server support
schemars = "1.0"
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Vector database & columnar storage
lancedb = "0.26"
arrow = "57"
arrow-array = "57"
arrow-schema = "57"

# Embeddings
fastembed = "5.1"

# Caching
lru = "0.16"

# Hashing
sha2 = "0.10"

# SQLite
rusqlite = { version = "0.38", features = ["bundled"] }

# File operations
walkdir = "2.5"
diffy = "0.4"
glob = "0.3"

# Code search
regex = "1"
ignore = "0.4"

# URL encoding
urlencoding = "2"

# Filesystem paths
dirs = "6"

# Git
git2 = "0.20"

# Security
zeroize = { version = "1", features = ["derive"] }

# Config parsing
toml = "1.0"

# ML / Clustering
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"

# Binary encoding
bincode = { version = "2", features = ["serde"] }

# Crypto
chacha20poly1305 = "0.10"
rand = "0.10"
base64 = "0.22"
hex = "0.4"
subtle = "2.6"

# Keyring (secure key storage)
keyring = "3"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# URL parsing
url = "2.5"

# Hostname
gethostname = "1.0"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Local LLM inference (optional)
llama-cpp-2 = "0.1"

# AWS SDK (Bedrock auth)
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"

# GCP auth (Vertex AI)
gcp_auth = "0.12"

# HTTP (hyper ecosystem)
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
http = "1.1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# gRPC
tonic = "0.13"
prost = "0.14"
prost-types = "0.14"

# Neo4j Bolt protocol
neo4rs = "0.9.0-rc.9"

# Token decoding (used by llama-cpp-2)
encoding_rs = "0.8"

# Async stream adapters
tokio-stream = "0.1"

# SafeTensors model weight loading
safetensors = "0.7"

# Postgres + pgvector (using tokio-postgres to avoid sqlx's libsqlite3-sys conflict)
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
pgvector = { version = "0.4.1", features = ["postgres"] }

# Testing
tempfile = "3"

# Patch crates whose crates.io releases pin incompatible libsqlite3-sys versions.
# Upstream git repos already have the fix (libsqlite3-sys >=0.30, <0.37) but
# haven't published new releases yet.
[patch.crates-io]
rustpython-vm = { git = "https://github.com/RustPython/RustPython", branch = "main", package = "rustpython-vm" }
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython", branch = "main", package = "rustpython-stdlib" }
