[workspace]
members = [
    "crates/brainwires-core",
    "crates/brainwires",
    "crates/brainwires-tools",
    "crates/brainwires-agents",
    "crates/brainwires-storage",
    "crates/brainwires-mcp",
    "crates/brainwires-permissions",
    "crates/brainwires-code-interpreters",
    "crates/brainwires-wasm",
    "crates/brainwires-network",
    "crates/brainwires-mcp-server",
    "crates/brainwires-a2a",
    "crates/brainwires-providers",
    "crates/brainwires-skills",
    "crates/brainwires-hardware",
    "crates/brainwires-datasets",
    "crates/brainwires-training",
    "crates/brainwires-autonomy",
    "crates/brainwires-cognition",
    "crates/brainwires-system",
    "crates/brainwires-channels",
    "crates/brainwires-telemetry",
    "extras/brainwires-billing",
    "extras/brainwires-memory-service",
    "extras/brainwires-scheduler",
    "extras/brainwires-proxy",
    "extras/brainwires-brain-server",
    "extras/brainwires-rag-server",
    "extras/brainwires-issues",
    "extras/reload-daemon",
    "extras/agent-chat",
    "extras/brainwires-cli",
    "extras/audio-demo-ffi",
    "extras/voice-assistant",
    "extras/matter-tool",
    "xtask",
]
exclude = [
    "deprecated/brainwires-audio",
    "deprecated/brainwires-brain",
    "deprecated/brainwires-mesh",
    "deprecated/brainwires-prompting",
    "deprecated/brainwires-rag",
    "deprecated/brainwires-relay",
    "deprecated/brainwires-seal",
    "deprecated/brainwires-mdap",
    "extras/brainclaw",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"
repository = "https://github.com/Brainwires/brainwires-framework"
homepage = "https://github.com/Brainwires/brainwires-framework"
authors = ["Brainwires"]
keywords = ["ai-agents", "llm", "mcp", "multi-agent", "framework"]
categories = ["development-tools", "science::robotics"]
readme = "README.md"
documentation = "https://docs.rs/brainwires"

[workspace.dependencies]
# Internal crates
brainwires-core = { path = "crates/brainwires-core", version = "0.8.0" }
brainwires-tools = { path = "crates/brainwires-tools", version = "0.8.0" }
brainwires-agents = { path = "crates/brainwires-agents", version = "0.8.0" }
brainwires-storage = { path = "crates/brainwires-storage", version = "0.8.0", default-features = false }
brainwires-mcp = { path = "crates/brainwires-mcp", version = "0.8.0" }
brainwires-permissions = { path = "crates/brainwires-permissions", version = "0.8.0" }
brainwires-code-interpreters = { path = "crates/brainwires-code-interpreters", version = "0.8.0" }
brainwires-wasm = { path = "crates/brainwires-wasm", version = "0.8.0" }
brainwires-network = { path = "crates/brainwires-network", version = "0.8.0" }
brainwires-mcp-server = { path = "crates/brainwires-mcp-server", version = "0.8.0" }
brainwires-a2a = { path = "crates/brainwires-a2a", version = "0.8.0", default-features = false }
brainwires-providers = { path = "crates/brainwires-providers", version = "0.8.0" }
brainwires-skills = { path = "crates/brainwires-skills", version = "0.8.0" }
brainwires-hardware = { path = "crates/brainwires-hardware", version = "0.8.0" }
brainwires-datasets = { path = "crates/brainwires-datasets", version = "0.8.0" }
brainwires-training = { path = "crates/brainwires-training", version = "0.8.0" }
brainwires-autonomy = { path = "crates/brainwires-autonomy", version = "0.8.0", default-features = false }
brainwires-cognition = { path = "crates/brainwires-cognition", version = "0.8.0", default-features = false }
brainwires-system = { path = "crates/brainwires-system", version = "0.8.0", default-features = false }
brainwires-channels   = { path = "crates/brainwires-channels",   version = "0.8.0" }
brainwires-telemetry  = { path = "crates/brainwires-telemetry",  version = "0.8.0", default-features = false }
brainwires-proxy = { path = "extras/brainwires-proxy", version = "0.8.0" }

# Tokenizer dependencies
tokenizers = "0.22"
tiktoken-rs = "0.9"

# ML training framework — individual crates to avoid cubecl-cpu (links = "lzma" conflict
# with xz2 from datafusion/lancedb). Using individual crates instead of umbrella `burn`.
burn-core = { version = "0.20", default-features = false, features = ["std"] }
burn-nn = { version = "0.20", default-features = false, features = ["std"] }
burn-optim = { version = "0.20", default-features = false, features = ["std"] }
burn-autodiff = { version = "0.20", default-features = false, features = ["std"] }
burn-wgpu = { version = "0.20", default-features = false, features = ["std", "autotune"] }
burn-ndarray = { version = "0.20", default-features = false, features = ["std"] }

# Home automation serial protocols
tokio-serial = "5.4"
# CRC calculations (Zigbee EZSP/ASH CRC-16-CCITT)
crc = "3"
# mDNS service discovery (Matter device/controller discovery)
mdns-sd = "0.12"

# Async runtime & utilities
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Error handling
anyhow = "1"
thiserror = "2"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.8"

# MCP protocol
rmcp = { version = "1.1", features = ["client", "server", "client-side-sse", "transport-child-process", "transport-io", "macros"] }

# MCP server support
schemars = "1.0"
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Vector database & columnar storage
lancedb = "0.27"
arrow = "57"
arrow-array = "57"
arrow-schema = "57"

# Embeddings
fastembed = "5.1"

# Caching
lru = "0.16"

# Semantic versioning
semver = { version = "1", features = ["serde"] }

# Hashing
sha2 = "0.10"

# SQLite
rusqlite = { version = "0.38", features = ["bundled"] }

# File operations
walkdir = "2.5"
diffy = "0.4"
glob = "0.3"

# Code search
regex = "1"
ignore = "0.4"

# URL encoding
urlencoding = "2"

# Filesystem paths
dirs = "6"

# Git
git2 = "0.20"

# Security
zeroize = { version = "1", features = ["derive"] }

# Config parsing
toml = "1.0"

# ML / Clustering
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"

# Bitflags
bitflags = "2"

# Binary encoding
bincode = { version = "2", features = ["serde"] }

# Crypto
chacha20poly1305 = "0.10"
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
hex = "0.4"
subtle = "2.6"
p256    = { version = "0.13.2", features = ["ecdh", "ecdsa", "arithmetic"] }
ecdsa   = { version = "0.16.9", features = ["der", "signing", "verifying"] }
hmac    = "0.12.1"
hkdf    = "0.12.4"
pbkdf2  = { version = "0.12.2", features = ["hmac"] }
aes     = "0.8.4"
ccm     = { version = "0.5.0", features = ["std"] }
der     = { version = "0.8.0", features = ["alloc", "derive"] }
pkcs8   = { version = "0.10.2", features = ["alloc"] }

# Keyring (secure key storage)
keyring = "3"

# Concurrent maps
dashmap = "6"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Discord API
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend", "chrono"] }

# Telegram Bot API
teloxide = { version = "0.13", features = ["macros"] }

# URL parsing
url = "2.5"

# Hostname
gethostname = "1.0"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Local LLM inference (optional)
llama-cpp-2 = "0.1"

# AWS SDK (Bedrock auth)
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"

# GCP auth (Vertex AI)
gcp_auth = "0.12"

# HTTP (hyper ecosystem)
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
http = "1.1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# gRPC
tonic = "0.13"
prost = "0.14"
prost-types = "0.14"

# Neo4j Bolt protocol
neo4rs = "0.9.0-rc.9"

# Token decoding (used by llama-cpp-2)
encoding_rs = "0.8"

# Async stream adapters
tokio-stream = "0.1"

# SafeTensors model weight loading
safetensors = "0.7"

# Postgres + pgvector (using tokio-postgres to avoid sqlx's libsqlite3-sys conflict)
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
pgvector = { version = "0.4.1", features = ["postgres"] }

# Testing
tempfile = "3"

