[package]
name = "brainwires-agents"
description = "Agent orchestration, coordination, and lifecycle management for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-agents"
keywords = ["ai-agents", "multi-agent", "task-orchestration", "llm", "autonomous"]
categories = ["development-tools"]

[dependencies]
# Internal crates
brainwires-core.workspace = true
brainwires-tools.workspace = true

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow.workspace = true

# Identifiers & time
uuid.workspace = true
chrono.workspace = true

# Hashing (for prompt hash snapshotting)
sha2.workspace = true
hex.workspace = true

# Git (for worktree management, native only)
git2 = { workspace = true, optional = true }

# Graph algorithms (for state model dependency analysis)
petgraph = "0.7"

# Process liveness checking (Unix, native only)
libc = { version = "0.2", optional = true }

# Async traits
async-trait.workspace = true

# Regex — required for skills template parsing; also used by reasoning/mdap/seal
regex = { workspace = true }

# Async streams (needed by ChatAgent for StreamExt)
futures.workspace = true

# Eval framework (optional)
thiserror = { workspace = true, optional = true }

# ── SEAL deps ──────────────────────────────────────────────────────────
brainwires-knowledge = { workspace = true, optional = true }
brainwires-permissions = { workspace = true, optional = true }

# OpenTelemetry (optional, for otel feature)
opentelemetry = { version = "0.28", optional = true }

# Telemetry — analytics events + billing hooks (optional)
brainwires-telemetry = { workspace = true, optional = true }

# Logging
tracing.workspace = true

# ── Skills deps (absorbed from brainwires-skills) ─────────────────────────
serde_yml = { workspace = true }
semver = { workspace = true }
reqwest = { workspace = true, optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
futures.workspace = true
tempfile.workspace = true
tracing-subscriber = "0.3"
brainwires-knowledge = { workspace = true, features = ["knowledge", "prompting"] }
brainwires-permissions = { workspace = true }

[features]
default = ["native"]
native = ["dep:git2", "dep:libc", "brainwires-core/native", "brainwires-tools/native"]
wasm = ["brainwires-core/wasm", "brainwires-tools/wasm"]
# Reasoning module (merged from brainwires-reasoning)
reasoning = []
# Evaluation framework (merged from brainwires-eval)
eval = ["dep:thiserror"]
# OpenTelemetry span export for agent execution traces
otel = ["dep:opentelemetry"]
# Analytics events + billing hooks
telemetry = ["dep:brainwires-telemetry", "brainwires-telemetry/native"]
# MDAP: Multi-Dimensional Adaptive Planning (merged from brainwires-mdap)
mdap = ["dep:thiserror"]
# SEAL (Self-Evolving Agentic Learning)
seal = []
seal-mdap = ["seal", "mdap"]
seal-feedback = ["seal", "dep:brainwires-permissions"]
seal-knowledge = ["seal", "dep:brainwires-knowledge", "brainwires-knowledge/knowledge"]
# Skills (absorbed from brainwires-skills)
skills-registry = ["dep:reqwest"]
skills-signing = ["dep:ed25519-dalek", "dep:rand_core"]

[[example]]
name = "agent_pool"

[[example]]
name = "optimistic_concurrency"

[[example]]
name = "three_state_model"

[[example]]
name = "validation_loop"

[[example]]
name = "contract_net"

[[example]]
name = "saga_compensation"

[[example]]
name = "task_queue_scheduling"

[[example]]
name = "voting_consensus"
required-features = ["mdap"]

[[example]]
name = "task_decomposition"
required-features = ["mdap"]
