[package]
name = "brainwires-audio"
description = "Audio I/O, speech-to-text, and text-to-speech for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Always available
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Audio format (pure Rust, lightweight)
hound = "3.5"

# Audio hardware I/O (native only)
cpal = { version = "0.15", optional = true }
tokio-stream = { workspace = true, optional = true }

# HTTP for API backends (native only)
reqwest = { workspace = true, optional = true, features = ["multipart"] }
async-stream = { workspace = true, optional = true }

# FLAC encoding (pure Rust)
flacenc = { version = "0.5", optional = true }

# Local STT (optional heavy dep)
whisper-rs = { version = "0.15", optional = true }

[features]
default = ["native"]
native = ["dep:cpal", "dep:tokio-stream", "dep:reqwest", "dep:async-stream", "flac"]
flac = ["dep:flacenc"]
local-stt = ["dep:whisper-rs"]

[dev-dependencies]
tokio = { workspace = true }
