[package]
name = "brainwires-audio"
description = "Audio I/O, speech-to-text, and text-to-speech for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-audio"
keywords = ["audio", "speech-to-text", "text-to-speech", "stt", "tts"]
categories = ["multimedia::audio"]

[dependencies]
# Always available
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Audio format (pure Rust, lightweight)
hound = "3.5"

# Audio hardware I/O (native only)
cpal = { version = "0.15", optional = true }
tokio-stream = { workspace = true, optional = true }

# Provider API clients (native only — replaces direct reqwest usage)
brainwires-providers = { workspace = true, optional = true }

# Base64 decoding (needed for Google TTS response)
base64 = { workspace = true, optional = true }

# Streaming support (native only)
async-stream = { workspace = true, optional = true }

# FLAC encode/decode (pure Rust)
flacenc = { version = "0.5", optional = true }
claxon = { version = "0.4", optional = true }

# Local STT (optional heavy dep)
whisper-rs = { version = "0.15", optional = true }

[features]
default = ["native"]
native = ["dep:cpal", "dep:tokio-stream", "dep:brainwires-providers", "dep:async-stream", "dep:base64", "flac"]
flac = ["dep:flacenc", "dep:claxon"]
local-stt = ["dep:whisper-rs"]

[dev-dependencies]
tokio = { workspace = true }

[[example]]
name = "speech_to_text"
required-features = ["native"]

[[example]]
name = "text_to_speech"
required-features = ["native"]
